--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,14 +26,29 @@ jobs:
       - name: Run tests
         run: |
           python -m pytest -q
-  docker-build:
+  docker-build-and-push:
     runs-on: ubuntu-latest
     needs: test
+
+    permissions:
+      contents: read
+      packages: write
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Build Docker image
+      - name: Log in to GHCR
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Build and push image
         run: |
-          docker build -t fastapi-cicd-mvp:ci .
-  
+          IMAGE=ghcr.io/${{ github.repository }}/fastapi-cicd-mvp
+          docker build -t $IMAGE:${{ github.sha }} -t $IMAGE:latest .
+          docker push $IMAGE:${{ github.sha }}
+          docker push $IMAGE:latest
+
